--- a/bin/BigSchool.dll.config
+++ b/bin/BigSchool.dll.config
@@ -6,11 +6,11 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="true" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-KDBHI4D\SQLEXPRESS;Initial Catalog=aspnet-BigSchool-20210707081925;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="BigSchoolContext" connectionString="data source=DESKTOP-KDBHI4D\SQLEXPRESS;initial catalog=aspnet-BigSchool-20210707081925;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-KDBHI4D\SQLEXPRESS;;Initial Catalog=BigSchool;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="BigSchoolContext" connectionString="data source=DESKTOP-KDBHI4D\SQLEXPRESS;initial catalog=BigSchool;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
